fix(client): Prevent editor view from showing horizontal scroll bars
fixes #776

--- a/client/src/app/lab-editor/editor-view/editor-view.component.scss
+++ b/client/src/app/lab-editor/editor-view/editor-view.component.scss
@@ -24,7 +24,7 @@ mat-drawer-container {
 }
 
 monaco-editor {
-  flex: 1;
+  width: 100%;
 }
 
 .ml-editor-restore-message {
